--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -25,10 +25,12 @@
     "axios": "^1.6.0",
     "expo": "~51.0.28",
     "expo-crypto": "~13.0.2",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
     "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~7.1.2",
     "typescript": "^5.1.3"
   },
   "private": true
