--- a/src/mobile/tsconfig.json
+++ b/src/mobile/tsconfig.json
@@ -13,5 +13,11 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+  ],
+  "exclude": [
+    "**/__tests__/**/*",
+    "**/src/test/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
