--- a/src/backend/API/appsettings.json
+++ b/src/backend/API/appsettings.json
@@ -31,10 +31,12 @@
     "ProjectId": "your-firebase-project-id"
   },
   "PaymentGateway": {
+    "Provider": "Iyzico",
+    "Sandbox": true,
     "CallbackUrl": "http://localhost:5000",
     "Iyzico": {
-      "ApiKey": "sandbox-your-api-key",
-      "SecretKey": "sandbox-your-secret-key",
+      "ApiKey": "sandbox-XXXXXX",
+      "SecretKey": "sandbox-YYYYYY",
       "BaseUrl": "https://sandbox-api.iyzipay.com"
     },
     "PayTR": {
