--- a/src/mobile/app.json
+++ b/src/mobile/app.json
@@ -1,37 +1,79 @@
 {
   "expo": {
-    "name": "arayanibul",
+    "name": "Arayanibul",
     "slug": "arayanibul",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "arayanibul",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#E6F4FE"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.arayanibul.app",
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Arayanibul needs access to your camera to take photos for your ads.",
+        "NSPhotoLibraryUsageDescription": "Arayanibul needs access to your photo library to select photos for your ads.",
+        "NSLocationWhenInUseUsageDescription": "Arayanibul uses your location to show you nearby offers and services.",
+        "NSLocationAlwaysUsageDescription": "Arayanibul uses your location to show you nearby offers and services.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Arayanibul uses your location to show you nearby offers and services.",
+        "NSUserTrackingUsageDescription": "This allows us to provide you with personalized ads and improve your experience.",
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "arayanibul",
+              "com.googleusercontent.apps.YOUR_REVERSED_CLIENT_ID",
+              "fbYOUR_FACEBOOK_APP_ID"
+            ]
+          }
+        ]
+      }
     },
     "android": {
+      "package": "com.arayanibul.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "NOTIFICATIONS"
+      ]
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "bundler": "metro"
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#007bff",
+          "sounds": ["./assets/sounds/notification.wav"]
+        }
+      ]
     ],
     "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
+      "typedRoutes": true
     }
   }
 }
