--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -19,18 +19,24 @@
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.6.0",
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,14 +44,15 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~7.1.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
